# ewepkg

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
commons/: Cargo.toml  lib.rs  lua_helpers.rs
commons/types/: mod.rs  version.rs
ewe/: Cargo.toml
ewe-build/: Cargo.toml  color.rs  main.rs
ewe-build/build_script/: mod.rs  structs.rs
examples/: cronie.ewe.lua  ewepkg.ewe.lua  llvm.ewebuild  minimum.ewebuild  package.lua
examples/llvm/: ewebuild
examples/minimum/: ewebuild
src/: main.rs  script.rs  source.rs  types.rs  util.rs  version.rs
