[package]
name = "ewepkg"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ewe"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.1.1", features = ["derive"] }
rhai = { version = "1.12.0", path = "../rhai", features = ["serde", "sync"] }
serde = { version = "1.0.152", features = ["derive"] }
thiserror = "1.0.38"
url = { version = "2.3.1", features = ["serde"] }
