[package]
name = "ewe-build"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ewe-build"
path = "main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
ewe-commons = { path = "../commons", features = ["mlua"] }
mlua = { version = "0.8.6", features = ["lua54", "serialize"] }
paste = "1.0.11"
reqwest = { workspace = true }
serde_json = "1.0.91"
