[package]
name = "ewe-build"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ewe-build"
path = "main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
ewe-commons = { workspace = true, features = ["mlua"] }
mlua = { workspace = true }
once_cell = { workspace = true }
paste = "1.0.11"
reqwest = { workspace = true }
serde_json = { workspace = true }
